# decomp-toolkit

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  deny.toml  rustfmt.toml
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml
.github/workflows/: build.yml
assets/: DMAErrorHandler.yml  DVDGetDriveStatus.yml  DVDInit.yml  DVDLowReset.yml  DVDLowStopMotor.yml  DecrementerExceptionCallback.yml  DecrementerExceptionHandler.yml  EXIGetID.yml  IOS_Open.yml  IPCCltInit.yml  ISFS_OpenAsync.yml  ISFS_OpenLib.yml  InitMetroTRKCommTable.yml  NANDLoggingAddMessageAsync.yml  NANDPrivateOpenAsync.yml  OSDefaultExceptionHandler.yml  OSDisableScheduler.yml  OSExceptionVector.yml  OSRegisterShutdownFunction.yml  OSResetSystem.yml  OSReturnToMenu.yml  OSSetArenaHi.yml  OSSetMEM1ArenaHi.yml  ReportOSInfo.yml  SCInit.yml  SCReloadConfFileAsync.yml  SIGetType.yml  SIInit.yml  SISetSamplingRate.yml  TRKEXICallBack.yml  TRKExceptionHandler.yml  TRKInterruptHandlerEnableInterrupts.yml  TRKLoadContext.yml  TRKNubWelcome.yml  __NANDPrintErrorMessage.yml  __OSCacheInit.yml  __OSContextInit.yml  __OSDBIntegrator.yml  __OSDBJump.yml  __OSGetExceptionHandler.yml  (+25 more)
assets/signatures/: ClearArena.yml  DBInit.yml  DVDLowWaitCoverClose.yml  DVDReadDiskID.yml  DVDReset.yml  DVDSetAutoFatalMessaging.yml  ESP_GetTitleId.yml  EXIInit.yml  GXInit.yml  IPCiProfQueueReq.yml  InitMetroTRK.yml  NANDInit.yml  NANDSetAutoErrorMessaging.yml  OSExceptionInit.yml  OSInit.yml  OSInitAlarm.yml  OSRegisterResetFunction.yml  OSReport.yml  OSSetArenaLo.yml  OSSetMEM1ArenaLo.yml  OSSetMEM2ArenaHi.yml  OSSetMEM2ArenaLo.yml  OSSwitchFPUContext.yml  RSOStaticLocateObject.yml  SISetXY.yml  TRKInitializeIntDrivenUART.yml  TRKInitializeNub.yml  TRKInterruptHandler.yml  TRKNubMainLoop.yml  TRKRestoreExtended1Block.yml  TRKSaveExtended1Block.yml  TRKSwapAndGo.yml  TRKTargetContinue.yml  TRK_main.yml  VIGetTvFormat.yml  _ExitProcess.yml  __DVDCheckDevice.yml  __DVDClearWaitingQueue.yml  __DVDFSInit.yml  __DVDInitWA.yml  (+40 more)
assets/syntax/: README  default.themedump  default_newlines.packdump
assets/tests/: cfa_tests.yml  relative_bytes_jump_table_snippets.txt
docs/: other_approaches.md  readme.md  terminology.md
src/: argh_version.rs  argp_version.rs  main.rs
src/analysis/: cfa.rs  cfa_tests.rs  executor.rs  mod.rs  objects.rs  pass.rs  signatures.rs  slices.rs  tracker.rs  vm.rs
src/cmd/: alf.rs  ar.rs  bakeversion.rs  demangle.rs  disc.rs  dol.rs  dwarf.rs  elf.rs  elf2dol.rs  extab.rs  map.rs  metroidbuildinfo.rs  mod.rs  nlzss.rs  rarc.rs  rel.rs  rso.rs  shasum.rs  u8_arc.rs  vfs.rs  wad.rs  xex.rs  yay0.rs  yaz0.rs
src/util/: alf.rs  asm.rs  bin2c.rs  cfa.rs  comment.rs  config.rs  crypto.rs  dep.rs  diff.rs  dol.rs  dwarf.rs  elf.rs  executor.rs  extab.rs  file.rs  lcf.rs  map.rs  map_exe.rs  mod.rs  ncompress.rs  nested.rs  nlzss.rs  obj.rs  path.rs  rarc.rs  read.rs  reader.rs  rel.rs  rso.rs  signatures.rs  sigs.rs  slices.rs  split.rs  take_seek.rs  toposort.rs  tracker.rs  u8_arc.rs  vm.rs  wad.rs  xex.rs  (+3 more)
src/util/dwarf/: mod.rs  print.rs
src/vfs/: common.rs  disc.rs  mod.rs  rarc.rs  std_fs.rs  u8_arc.rs  wad.rs  wasm.rs
wit/: deps.toml  vfs.wit
