[package]
name = "decomp-toolkit"
description = "Yet another GameCube/Wii decompilation toolkit."
authors = ["Luke Street <luke@street.dev>"]
license = "MIT OR Apache-2.0"
version = "1.8.0"
edition = "2021"
publish = false
repository = "https://github.com/encounter/decomp-toolkit"
readme = "README.md"
categories = ["command-line-utilities"]
rust-version = "1.81"

[[bin]]
name = "dtk"
path = "src/main.rs"

[profile.release]
panic = "abort"

[profile.release-lto]
inherits = "release"
lto = "fat"
strip = "debuginfo"
codegen-units = 1

[dependencies]
encoding_rs = "0.8"
aes = "0.8"
anyhow = { version = "1.0", features = ["backtrace"] }
ar = { git = "https://github.com/bjorn3/rust-ar.git", branch = "write_symbol_table" }
argp = "0.3"
base16ct = "0.2"
base64 = "0.22"
byteorder = "1.5"
typed-path = "0.9"
cbc = "0.1"
crossterm = "0.28"
cwdemangle = "1.0"
cwextab = "1.1"
dyn-clone = "1.0"
enable-ansi-support = "0.2"
filetime = "0.2"
fixedbitset = "0.5"
flagset = { version = "0.4", features = ["serde"] }
glob = "0.3"
gnuv2_demangle = "0.4"
hex = "0.4"
indent = "0.1"
indexmap = "2.6"
itertools = "0.13"
log = "0.4"
memchr = "2.7"
memmap2 = "0.9"
multimap = "0.10"
nodtool = "1.4"
#nodtool = { path = "../nod-rs/nodtool" }
num_enum = "0.7"
objdiff-core = { version = "=2.2", features = ["ppc"] }
#objdiff-core = { path = "../objdiff/objdiff-core", features = ["ppc"] }
object = { version = "0.36", features = ["read_core", "std", "elf", "write_std"], default-features = false }
once_cell = "1.20"
orthrus-ncompress = "0.2"
owo-colors = { version = "4.1", features = ["supports-colors"] }
ppc750cl = "0.3"
rayon = "1.10"
regex = "1.11"
rustc-hash = "2.0"
sanitise-file-name = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
serde_yaml = "0.9"
sha-1 = "0.10"
size = "0.4"
supports-color = "3.0"
syntect = { version = "5.2", features = ["parsing", "regex-fancy", "dump-load"], default-features = false }
tracing = "0.1"
tracing-attributes = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-width = "0.2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
zerocopy = { version = "0.8", features = ["derive"] }

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1"
